# ChangeLog for sys-kernel/mm-sources
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.370 2008/06/09 13:57:49 voxus Exp $

*mm-sources-2.6.26_rc5-r1 (09 Jun 2008)

  09 Jun 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.26_rc5-r1.ebuild:
  Version bump.

*mm-sources-2.6.26_rc2-r1 (14 May 2008)

  14 May 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.26_rc2-r1.ebuild:
  Version bump.

*mm-sources-2.6.25-r1 (26 Apr 2008)

  26 Apr 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.25-r1.ebuild:
  Version bump.

*mm-sources-2.6.25_rc8-r2 (11 Apr 2008)

  11 Apr 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.25_rc8-r2.ebuild:
  Version bump.

*mm-sources-2.6.25_rc8-r1 (02 Apr 2008)

  02 Apr 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.25_rc8-r1.ebuild:
  Version bump.

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Charlie Shepherd (masterdriverz, #153940) from metadata.xml.

*mm-sources-2.6.25_rc5-r1 (11 Mar 2008)

  11 Mar 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.25_rc5-r1.ebuild:
  Version bump.

*mm-sources-2.6.25_rc3-r1 (06 Mar 2008)

  06 Mar 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.25_rc3-r1.ebuild:
  Version bump.

  01 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  mm-sources-2.6.25_rc2-r1.ebuild:
  Use K_EXTRAELOG instead of K_EXTRAEINFO (bug #199464).

*mm-sources-2.6.25_rc2-r1 (17 Feb 2008)

  17 Feb 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  -mm-sources-2.6.23-r1.ebuild, -mm-sources-2.6.24_rc2-r1.ebuild,
  -mm-sources-2.6.24_rc3-r1.ebuild, -mm-sources-2.6.24_rc3-r2.ebuild,
  -mm-sources-2.6.24_rc4-r1.ebuild, -mm-sources-2.6.24_rc5-r1.ebuild,
  -mm-sources-2.6.24_rc6-r1.ebuild, -mm-sources-2.6.24_rc8-r1.ebuild,
  +mm-sources-2.6.25_rc2-r1.ebuild:
  Version bump.
