@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.370 2008/06/09 13:57:49 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.371 2008/06/11 11:00:04 voxus Exp $
+
+*mm-sources-2.6.26_rc5-r2 (11 Jun 2008)
+
+  11 Jun 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
+  -mm-sources-2.6.24-r1.ebuild, -mm-sources-2.6.25_rc2-r1.ebuild,
+  -mm-sources-2.6.25_rc3-r1.ebuild, -mm-sources-2.6.25_rc5-r1.ebuild,
+  -mm-sources-2.6.25_rc8-r1.ebuild, -mm-sources-2.6.25_rc8-r2.ebuild,
+  -mm-sources-2.6.25-r1.ebuild, +mm-sources-2.6.26_rc5-r2.ebuild:
+  Version bump. Cleaned out old ebuilds.
 
 *mm-sources-2.6.26_rc5-r1 (09 Jun 2008)
 
